feat: refactor code and logic